--- a/src/app/employee/dashboard/dashboard.component.html
+++ b/src/app/employee/dashboard/dashboard.component.html
@@ -45,7 +45,7 @@
     <div class="home">
       <h4>Home</h4>
       <span class="material-symbols-outlined">chevron_right</span>
-      <h4>Batch</h4>
+      <h4>Profile</h4>
     </div>
     <router-outlet></router-outlet>
   </mat-drawer-content>
