--- a/src/app/employee/dashboard/profile/profile.component.html
+++ b/src/app/employee/dashboard/profile/profile.component.html
@@ -3,54 +3,55 @@
     <div class="details">
       <div class="primary">
         <div class="primary-info">
-          <h1>Primary Info</h1>
-          <span class="material-symbols-outlined">edit</span>
+          <h2>Primary Info</h2>
+          <button class="material-symbols-outlined edit" (click)="edit($event)">edit</button>
         </div>
         <div class="gap">
           <div class="row">
             <div class="col-md-3">
               <span>Employee ID:</span>&nbsp;&nbsp;
-              <span>123</span>
+              <input type="text" name="" id="" [readonly]="clicked" value="1234">
+              <!-- <span  [readonly]="clicked" >1234</span> -->
             </div>
             <div class="col-md-3">
               <span>Employee Name:</span>&nbsp;&nbsp;
-              <span>123</span>
+              <input type="text" name="" id="" [readonly]="clicked" value="1234">
             </div>
             <div class="col-md-3">
               <span>Date of Joining:</span>&nbsp;&nbsp;
-              <span>123</span>
+              <input type="text" name="" id="" [readonly]="clicked" value="1234">
             </div>
             <div class="col-md-3">
               <span>Date of Birth:</span>&nbsp;&nbsp;
-              <span>123</span>
+              <input type="text" name="" id="" [readonly]="clicked" value="1234">
             </div>
           </div>
           <div class="row">
             <div class="col-md-3">
               <span>Salary:</span>&nbsp;&nbsp;
-              <span>123</span>
+              <input type="text" name="" id="" [readonly]="clicked" value="1234">
             </div>
             <div class="col-md-3">
               <span>Blood Group:</span>&nbsp;&nbsp;
-              <span>123</span>
+              <input type="text" name="" id="" [readonly]="clicked" value="1234">
             </div>
             <div class="col-md-3">
               <span>Designation:</span>&nbsp;&nbsp;
-              <span>123</span>
+              <input type="text" name="" id="" [readonly]="clicked" value="1234">
             </div>
             <div class="col-md-3">
               <span>Gender:</span>&nbsp;&nbsp;
-              <span>123</span>
+              <input type="text" name="" id="" [readonly]="clicked" value="1234">
             </div>
           </div>
           <div class="row">
             <div class="col-md-3">
               <span>Nationality:</span>&nbsp;&nbsp;
-              <span>123</span>
+              <input type="text" name="" id="" [readonly]="clicked" value="1234">
             </div>
             <div class="col-md-3">
               <span>Employee Status:</span>&nbsp;&nbsp;
-              <span>123</span>
+              <input type="text" name="" id="" [readonly]="clicked" value="1234">
             </div>
           </div>
         </div>
@@ -60,38 +61,38 @@
 
       <div class="secondary">
         <div class="secondary-info">
-          <h1>Secondary Info</h1>
+          <h2>Secondary Info</h2>
           <div class="gap">
             <div class="row">
               <div class="col-md-3">
                 <span>PAN No:</span>&nbsp;&nbsp;
-                <span>123</span>
+                <input type="text" name="" id="" [readonly]="clicked" value="1234">
               </div>
               <div class="col-md-3">
                 <span>Aadhaar No:</span>&nbsp;&nbsp;
-                <span>123</span>
+                <input type="text" name="" id="" [readonly]="clicked" value="1234">
               </div>
               <div class="col-md-3">
                 <span>Father Name:</span>&nbsp;&nbsp;
-                <span>123</span>
+                <input type="text" name="" id="" [readonly]="clicked" value="1234">
               </div>
               <div class="col-md-3">
                 <span>Mother Name:</span>&nbsp;&nbsp;
-                <span>123</span>
+                <input type="text" name="" id="" [readonly]="clicked" value="1234">
               </div>
             </div>
             <div class="row">
               <div class="col-md-3">
                 <span>Spouse Name</span>&nbsp;&nbsp;
-                <span>123</span>
+                <input type="text" name="" id="" [readonly]="clicked" value="1234">
               </div>
               <div class="col-md-3">
                 <span>Passport No:</span>&nbsp;&nbsp;
-                <span>123</span>
+                <input type="text" name="" id="" [readonly]="clicked" value="1234">
               </div>
               <div class="col-md-3">
                 <span>Marital Status:</span>&nbsp;&nbsp;
-                <span>123</span>
+                <input type="text" name="" id="" [readonly]="clicked" value="1234">
               </div>
             </div>
           </div>
@@ -102,84 +103,86 @@
 
       <div class="education">
         <div class="education-info">
-          <h1>Education Details</h1>
+          <h2>Education Details</h2>
           <div class="gap">
             <div class="row">
               <div class="col-md-3">
                 <span>Education Type:</span>&nbsp;&nbsp;
-                <span>123</span>
+                <input type="text" name="" id="" [readonly]="clicked" value="1234">
+
               </div>
               <div class="col-md-3">
                 <span>Year of Passing:</span>&nbsp;&nbsp;
-                <span>123</span>
+                <input type="text" name="" id="" [readonly]="clicked" value="1234">
+
               </div>
               <div class="col-md-3">
                 <span>Percentage (%):</span>&nbsp;&nbsp;
-                <span>123</span>
+                <input type="text" name="" id="" [readonly]="clicked" value="1234">
               </div>
               <div class="col-md-3">
                 <span>University Name:</span>&nbsp;&nbsp;
-                <span>123</span>
+                <input type="text" name="" id="" [readonly]="clicked" value="1234">
               </div>
             </div>
             <div class="row">
               <div class="col-md-3">
                 <span>Institue Name:</span>&nbsp;&nbsp;
-                <span>123</span>
+                <input type="text" name="" id="" [readonly]="clicked" value="1234">
               </div>
               <div class="col-md-3">
                 <span>Specialization</span>&nbsp;&nbsp;
-                <span>123</span>
+                <input type="text" name="" id="" [readonly]="clicked" value="1234">
               </div>
               <div class="col-md-3">
                 <span>State:</span>&nbsp;&nbsp;
-                <span>123</span>
+                <input type="text" name="" id="" [readonly]="clicked" value="1234">
               </div>
             </div>
           </div>
         </div>
       </div>
-    
+
       <hr>
 
       <div class="address">
         <div class="address-info">
-          <h1>Address Details</h1>
+          <h2>Address Details</h2>
           <div class="gap">
             <div class="row">
               <div class="col-md-3">
                 <span>Address Type:</span>&nbsp;&nbsp;
-                <span>123</span>
+                <input type="text" name="" id="" [readonly]="clicked" value="1234">
               </div>
               <div class="col-md-3">
                 <span>Door No:</span>&nbsp;&nbsp;
-                <span>123</span>
+                <input type="text" name="" id="" [readonly]="clicked" value="1234">
               </div>
               <div class="col-md-3">
                 <span>Street:</span>&nbsp;&nbsp;
-                <span>123</span>
+                <input type="text" name="" id="" [readonly]="clicked" value="1234">
               </div>
               <div class="col-md-3">
                 <span>Locality:</span>&nbsp;&nbsp;
-                <span>123</span>
+                <input type="text" name="" id="" [readonly]="clicked" value="1234">
               </div>
             </div>
             <div class="row">
               <div class="col-md-3">
                 <span>City:</span>&nbsp;&nbsp;
-                <span>123</span>
+                <input type="text" name="" id="" [readonly]="clicked" value="1234">
               </div>
               <div class="col-md-3">
                 <span>State</span>&nbsp;&nbsp;
-                <span>123</span>
+                <input type="text" name="" id="" [readonly]="clicked" value="1234">
               </div>
               <div class="col-md-3">
                 <span>PIN Code:</span>&nbsp;&nbsp;
-                <span>123</span>
+                <input type="text" name="" id="" [readonly]="clicked" value="1234">
               </div>
               <div class="col-md-3">
                 <span>Land Mark:</span>&nbsp;&nbsp;
-                <span>123</span>
+                <input type="text" name="" id="" [readonly]="clicked" value="1234">
               </div>
             </div>
           </div>
@@ -189,34 +192,34 @@
 
       <div class="bank">
         <div class="bank-info">
-          <h1>Bank Details</h1>
+          <h2>Bank Details</h2>
           <div class="gap">
             <div class="row">
               <div class="col-md-3">
                 <span>Account No:</span>&nbsp;&nbsp;
-                <span>123</span>
+                <input type="text" name="" id="" [readonly]="clicked" value="1234">
               </div>
               <div class="col-md-3">
                 <span>Bank Name:</span>&nbsp;&nbsp;
-                <span>123</span>
+                <input type="text" name="" id="" [readonly]="clicked" value="1234">
               </div>
               <div class="col-md-3">
                 <span>Bank Type:</span>&nbsp;&nbsp;
-                <span>123</span>
+                <input type="text" name="" id="" [readonly]="clicked" value="1234">
               </div>
               <div class="col-md-3">
                 <span>IFSC Code:</span>&nbsp;&nbsp;
-                <span>123</span>
+                <input type="text" name="" id="" [readonly]="clicked" value="1234">
               </div>
             </div>
             <div class="row">
               <div class="col-md-3">
                 <span>Branch:</span>&nbsp;&nbsp;
-                <span>123</span>
+                <input type="text" name="" id="" [readonly]="clicked" value="1234">
               </div>
               <div class="col-md-3">
                 <span>State</span>&nbsp;&nbsp;
-                <span>123</span>
+                <input type="text" name="" id="" [readonly]="clicked" value="1234">
               </div>
             </div>
           </div>
@@ -227,20 +230,20 @@
 
       <div class="skills">
         <div class="skills-info">
-          <h1>Technical Skills</h1>
+          <h2>Technical Skills</h2>
           <div class="gap">
             <div class="row">
               <div class="col-md-3">
                 <span>Skill Type:</span>&nbsp;&nbsp;
-                <span>123</span>
+                <input type="text" name="" id="" [readonly]="clicked" value="1234">
               </div>
               <div class="col-md-3">
                 <span>Skill Rating:</span>&nbsp;&nbsp;
-                <span>123</span>
+                <input type="text" name="" id="" [readonly]="clicked" value="1234">
               </div>
               <div class="col-md-3">
                 <span>Year of Experience (over skill):</span>&nbsp;&nbsp;
-                <span>123</span>
+                <input type="text" name="" id="" [readonly]="clicked" value="1234">
               </div>
             </div>
           </div>
@@ -251,44 +254,44 @@
 
       <div class="experience">
         <div class="experience-info">
-          <h1>Experience</h1>
+          <h2>Experience</h2>
           <div class="gap">
             <div class="row">
               <div class="col-md-3">
                 <span>Date of Joining:</span>&nbsp;&nbsp;
-                <span>123</span>
+                <input type="text" name="" id="" [readonly]="clicked" value="1234">
               </div>
               <div class="col-md-3">
                 <span>Year of Experience:</span>&nbsp;&nbsp;
-                <span>123</span>
+                <input type="text" name="" id="" [readonly]="clicked" value="1234">
               </div>
               <div class="col-md-3">
                 <span>Company Name:</span>&nbsp;&nbsp;
-                <span>123</span>
+                <input type="text" name="" id="" [readonly]="clicked" value="1234">
               </div>
               <div class="col-md-3">
                 <span>Designation:</span>&nbsp;&nbsp;
-                <span>123</span>
+                <input type="text" name="" id="" [readonly]="clicked" value="1234">
               </div>
             </div>
           </div>
         </div>
       </div>
-      
+
       <hr>
 
       <div class="contact">
         <div class="contact-info">
-          <h1>Contact</h1>
+          <h2>Contact</h2>
           <div class="gap">
             <div class="row">
               <div class="col-md-3">
                 <span>Contact Type:</span>&nbsp;&nbsp;
-                <span>123</span>
+                <input type="text" name="" id="" [readonly]="clicked" value="1234">
               </div>
               <div class="col-md-3">
                 <span>Contact No:</span>&nbsp;&nbsp;
-                <span>123</span>
+                <input type="text" name="" id="" [readonly]="clicked" value="1234">
               </div>
             </div>
           </div>
