--- a/src/app/mentor/mentor.component.scss
+++ b/src/app/mentor/mentor.component.scss
@@ -59,7 +59,9 @@ mat-drawer button {
     small {
         display: block;
         color: #086288;
-        font-weight: 400;
+        font-family: 'Open Sans', sans-serif;
+        font-weight: 900;
+        font-size: 11px;
     }
 }
 
