--- a/src/app/employee/dashboard/mock/mock.component.html
+++ b/src/app/employee/dashboard/mock/mock.component.html
@@ -4,7 +4,7 @@
     <div class="row">
 
       <div class="col-md-3">
-        <div class="attendance px-2">
+        <div class="attendance">
           <label>
             <h3>Attendance</h3>
           </label>
