--- a/src/app/employee/dashboard/mock/mock.component.scss
+++ b/src/app/employee/dashboard/mock/mock.component.scss
@@ -26,7 +26,7 @@ mat-card {
 }
 
 .attendance, .rating {
-    border: 1px solid #00000024;
+    border: 1px solid #D3D5DA;
     border-radius: 8px;
     label {
         position: relative;
@@ -43,7 +43,7 @@ h3 {
 }
 
 .attented {
-    font-family: 'Open Sans', sans-serif;
+    font-family: 'Muli', sans-serif;
     color: #075575;
     font-size: 80px;
     font-weight: bolder;
@@ -65,7 +65,8 @@ h3 {
     font-family: 'Open Sans', sans-serif;
     font-weight: bolder;
     font-size: 13px;
-    margin-top: 70px;
+    margin-top: 120px;
+    padding: 15px;
 }
 
 .morn, .noon {
@@ -74,7 +75,7 @@ h3 {
 
 #demo {
     width: 100%;
-    height: 206px;
+    height: 300px;
 }
 
 mat-card {
