--- a/src/app/employee/employee-details/contact/contact.component.scss
+++ b/src/app/employee/employee-details/contact/contact.component.scss
@@ -46,6 +46,12 @@ mat-card {
     cursor: pointer;
     display: flex;
     float: right;
+    font-family: 'Open Sans', 'sans-serif';
+    font-weight: bolder;
+    font-size: 13px;
+    span {
+        font-size: 20px;
+    }
 }
 
 .contact {
