--- a/src/app/employee/employee-details/education-details/education-details.component.scss
+++ b/src/app/employee/employee-details/education-details/education-details.component.scss
@@ -43,6 +43,12 @@
     cursor: pointer;
     display: flex;
     float: right;
+    font-family: 'Open Sans', 'sans-serif';
+    font-weight: bolder;
+    font-size: 13px;
+    span {
+        font-size: 20px;
+    }
 }
 
 .row {
