--- a/src/app/employee/employee-details/tech-skills/tech-skills.component.scss
+++ b/src/app/employee/employee-details/tech-skills/tech-skills.component.scss
@@ -44,10 +44,22 @@
     cursor: pointer;
     display: flex;
     float: right;
+    color: #086288;
+    font-family: 'Open Sans', 'sans-serif';
+    font-weight: bolder;
+    font-size: 13px;
+    span {
+        font-size: 20px;
+    }
 }
 
 .row {
     font-family: 'Open Sans', sans-serif;
     font-weight: 600;
     font-size: 14px;
+}
+
+::ng-deep .mat-card:not([class*=mat-elevation-z]) {
+    box-shadow: 0px 2px 1px -1pxrgba(0, 0, 0, 0.2),0px 1px 1px 0pxrgba(0, 0, 0, 0.14),0px 1px 3px 0pxrgba(0, 0, 0, 0.12);
+    margin-top: 25px;
 }
