--- a/src/styles.scss
+++ b/src/styles.scss
@@ -8,7 +8,7 @@ html {
 body {
     height: 100%;
     margin: 0;
-    font-family: 'Open Sans', sans-serif;
+    // font-family: 'Open Sans', sans-serif;
 }
 
 .previous {
