--- a/src/app/employee/dashboard/dashboard.component.scss
+++ b/src/app/employee/dashboard/dashboard.component.scss
@@ -26,7 +26,7 @@ nav {
 }
 
 .d-flex {
-    width: 547px;
+    width: 85%;
     border-radius: 6px;
 }
 
@@ -47,7 +47,7 @@ nav {
 .name {
     position: relative;
     top: 6px;
-    font-family: Verdana, Sans-serif;
+    font-family: 'Open Sans', sans-serif;
 }
 
 ::ng-deep button.mat-menu-item:hover {
