--- a/src/app/employee/dashboard/profile/profile.component.html
+++ b/src/app/employee/dashboard/profile/profile.component.html
@@ -127,7 +127,7 @@
             </div>
             <div class="row">
               <div class="col-md-3">
-                <span>Institue Name:</span>&nbsp;&nbsp;
+                <span>Institute Name:</span>&nbsp;&nbsp;
                 <input type="text" name="" id="" [readonly]="clicked" value="1234">
               </div>
               <div class="col-md-3">
