--- a/src/app/employee/dashboard/profile/profile.component.scss
+++ b/src/app/employee/dashboard/profile/profile.component.scss
@@ -11,6 +11,9 @@
 .submit {
     display: flex;
     justify-content: end;
+    button {
+        font-family: 'Open Sans', sans-serif;
+    }
 }
 
 .ok {
