--- a/src/app/employee/employee-details/contact/contact.component.html
+++ b/src/app/employee/employee-details/contact/contact.component.html
@@ -20,7 +20,7 @@
             <div class="col-md-6">
               <mat-label class="d-block">Contact Number</mat-label>
               <mat-form-field appearance="outline" class="phone">
-                <span class="code">+91</span> 
+                <span class="code">+91</span>&nbsp;
                 <input matInput class="matInput" formControlName="contactNumber" required>
               </mat-form-field>
             </div>
