--- a/src/app/auth/login/login.component.scss
+++ b/src/app/auth/login/login.component.scss
@@ -5,8 +5,18 @@
   background-size: cover;
 }
 
+.loginn {
+  position: relative;
+  top: 43px;
+}
+
 .row {
   border-radius: 15px;
+}
+
+.logo {
+  display: flex;
+  justify-content: center;
 }
 
 .image {
@@ -16,6 +26,7 @@
 }
 
 .details {
+  font-family: 'Open Sans', 'sans-serif';
   background-color: #000000A2;
   border-radius: 0px 13px 13px 0px;
 }
@@ -41,6 +52,15 @@ mat-label {
 
 :host ::ng-deep .mat-form-field-appearance-outline:not(.mat-form-field-disabled) .mat-form-field-flex .mat-form-field-outline {
   background-color: white !important;
+  border-radius: 7px;
+  height: 40px;
+}
+
+:host ::ng-deep .mat-form-field-appearance-outline .mat-form-field-outline {
+  display: flex;
+  position: absolute;
+  top: 01em !important;
+  left: 0;
 }
 
 .submit {
@@ -50,6 +70,9 @@ mat-label {
   border-radius: 5px;
   height: 35px;
   justify-content: space-between;
+  button {
+    font-family: 'Open Sans', 'sans-serif';
+  }
 }
 
 .cancel {
@@ -58,7 +81,7 @@ mat-label {
   color: white;
   border-radius: 5px;
 
-  p {
+  button {
     position: relative;
     top: 7px;
     left: 41px;
@@ -66,9 +89,7 @@ mat-label {
 }
 
 .login {
-  position: relative;
-  top: 7px;
-  left: 55px;
+  left: 48px;
   color: white;
 }
 
