--- a/src/app/mentor/mock-rating/mock-rating.component.scss
+++ b/src/app/mentor/mock-rating/mock-rating.component.scss
@@ -17,3 +17,23 @@
         }
     }
 }
+
+.mock {
+    border: 1px solid #BCBCCB;
+    border-radius: 5px;
+    p {
+        position: relative;
+        bottom: 10px;
+        left: 25px;
+        background-color: white;
+        width: fit-content;
+    }
+}
+
+mat-card {
+    height: 80%;
+}
+
+#demo {
+    height: 250px;
+}
