--- a/src/app/admin/admin.component.html
+++ b/src/app/admin/admin.component.html
@@ -24,7 +24,7 @@
 <mat-drawer-container class="example-container">
   <mat-drawer mode="side" opened class="sidenav">
 
-    <div class="side" (click)="items()">
+    <div class="side">
       <button mat-button class="mat-button batch" routerLink="batch" [routerLinkActive]="['active']">
         <small>Batch</small>
       </button>
