--- a/src/app/auth/login/login.component.scss
+++ b/src/app/auth/login/login.component.scss
@@ -8,6 +8,8 @@
 .loginn {
   position: relative;
   top: 43px;
+  width: 75%;
+  margin: auto;
 }
 
 .row {
@@ -17,6 +19,9 @@
 .logo {
   display: flex;
   justify-content: center;
+  img {
+    width: 65%;
+  }
 }
 
 .image {
@@ -89,7 +94,7 @@ mat-label {
 }
 
 .login {
-  left: 48px;
+  left: 20px;
   color: white;
 }
 
