--- a/src/app/employee/dashboard/dashboard.component.html
+++ b/src/app/employee/dashboard/dashboard.component.html
@@ -22,7 +22,7 @@
             <span class="downArrow material-symbols-outlined">keyboard_arrow_down</span>
           </button>
             <mat-menu #menu="matMenu">
-              <button mat-menu-item>Profile</button>
+              <button mat-menu-item routerLink="profile">Profile</button>
               <button mat-menu-item>Change Password</button>
               <button mat-menu-item>Logout</button>
             </mat-menu>
@@ -35,7 +35,7 @@
 
 <mat-drawer-container class="example-container">
   <mat-drawer mode="side" opened class="sidenav">
-    <button mat-button class="matt-button p-0" routerLink="mock-rating" [routerLinkActive]="['active']">
+    <button mat-button class="matt-button p-0" routerLink="mock" [routerLinkActive]="['active']">
       <img src="/assets/images/dashboard.png" alt="" />
       <small>Dashboard</small>
     </button>
@@ -45,7 +45,7 @@
     <div class="home">
       <h4>Home</h4>
       <span class="material-symbols-outlined">chevron_right</span>
-      <h4>Profile</h4>
+      <h4>{{item}}</h4>
     </div>
     <router-outlet></router-outlet>
   </mat-drawer-content>
