--- a/src/app/auth/login/login.component.scss
+++ b/src/app/auth/login/login.component.scss
@@ -5,14 +5,10 @@
   background-size: cover;
 }
 
-.row {
-  border-radius: 15px;
-}
-
 .image {
   background-image: url('/assets/images/bulb.png');
   background-size: cover;
-  height: 610px !important;
+  // height: 610px !important;
 }
 
 .details {
@@ -84,4 +80,9 @@ hr {
   top: 165px;
   color: white;
   font-size: 10px;
+}
+
+.loginn {
+  width: 75%;
+  margin: auto;
 }
