--- a/src/app/auth/login/login.component.scss
+++ b/src/app/auth/login/login.component.scss
@@ -27,7 +27,7 @@
 .image {
   background-image: url('/assets/images/bulb.png');
   background-size: cover;
-  // height: 610px !important;
+  height: 610px !important;
 }
 
 .details {
@@ -110,9 +110,4 @@ hr {
   top: 165px;
   color: white;
   font-size: 10px;
-}
-
-.loginn {
-  width: 75%;
-  margin: auto;
 }
