--- a/src/app/employee/dashboard/dashboard.component.scss
+++ b/src/app/employee/dashboard/dashboard.component.scss
@@ -120,10 +120,10 @@ mat-drawer-content {
     display: flex;
 
     h4 {
-        font-weight: 600;
-        font-size: 14px;
-        font-family: Verdana;
-    }
+        font-weight: bolder;
+        font-size: 13px;
+        font-family: 'Open Sans', sans-serif;
+      }
 }
 
 .active {
