--- a/src/app/admin/mentor/mentor.component.scss
+++ b/src/app/admin/mentor/mentor.component.scss
@@ -44,7 +44,9 @@ table thead {
 }
 
 input::placeholder {
-  font: 13px Verdana, Sans-serif;
+  font-size: 13px;
+  font-weight: bolder;
+  font-family: 'Open Sans', sans-serif;
 }
 
 .action {
