--- a/src/app/admin/batch/batch.component.scss
+++ b/src/app/admin/batch/batch.component.scss
@@ -8,7 +8,7 @@
     font: 13px Verdana, Sans-serif;
    p{
        font-weight: 500
-   } 
+   }
 }
 
 tbody,
@@ -45,7 +45,9 @@ table thead {
 }
 
 input::placeholder {
-    font: 13px 'Open-sans', Sans-serif;
+  font-size: 13px;
+  font-weight: bolder;
+  font-family: 'Open Sans', sans-serif;
 }
 
 .action {
