--- a/src/app/admin/mentor/mentor.component.html
+++ b/src/app/admin/mentor/mentor.component.html
@@ -21,7 +21,7 @@
     <thead>
       <tr>
         <td>
-          <mat-checkbox class="example-margin"></mat-checkbox>
+          <mat-checkbox class="example-margin" [(ngModel)]="checked" (click)="selectAll()"></mat-checkbox>
         </td>
         <th scope="col">No</th>
         <th scope="col">Batch ID</th>
@@ -36,8 +36,8 @@
     </thead>
     <tbody>
       <tr>
-        <td>
-          <mat-checkbox class="example-margin"></mat-checkbox>
+        <td *ngFor="let r of emp">
+          <mat-checkbox class="example-margin" [(ngModel)]="r.checked"></mat-checkbox>
         </td>
         <th>1</th>
         <td>Mark</td>
