--- a/src/app/admin/request/request.component.html
+++ b/src/app/admin/request/request.component.html
@@ -19,7 +19,7 @@
       <thead>
         <tr>
           <td>
-            <mat-checkbox class="example-margin"></mat-checkbox>
+            <mat-checkbox class="example-margin" [(ngModel)]="checked" (click)="selectAll()"></mat-checkbox>
           </td>
           <th scope="col">No</th>
           <th scope="col">Employee ID</th>
@@ -33,8 +33,8 @@
       </thead>
       <tbody>
         <tr>
-          <td>
-            <mat-checkbox class="example-margin"></mat-checkbox>
+          <td *ngFor="let r of emp">
+            <mat-checkbox class="example-margin" [(ngModel)]="r.checked"></mat-checkbox>
           </td>
           <th>1</th>
           <td>Mark</td>
@@ -57,4 +57,3 @@
       </tbody>
     </table>
   </div>
-  
