--- a/src/app/admin/admin.component.scss
+++ b/src/app/admin/admin.component.scss
@@ -106,19 +106,19 @@ h4 {
   }
 }
 
-.batch {
+.batches {
   background-image: url('/assets/images/Batch.png');
   background-repeat: no-repeat;
   background-position: center center;
 }
 
-.mentor {
+.mentors {
   background-image: url('/assets/images/team.png');
   background-repeat: no-repeat;
   background-position: center center;
 }
 
-.request {
+.requests {
   background-image: url('/assets/images/request.png');
   background-repeat: no-repeat;
   background-position: center center;
