--- a/src/app/employee/dashboard/dashboard.component.html
+++ b/src/app/employee/dashboard/dashboard.component.html
@@ -19,10 +19,10 @@
               <img src="/assets/images/bulb.png" alt="...">
             </div>
             <button mat-button [matMenuTriggerFor]="menu" class="name">Moulvik
-            <span class="downArrow material-symbols-outlined">keyboard_arrow_down</span>
-          </button>
+              <span class="downArrow material-symbols-outlined">keyboard_arrow_down</span>
+            </button>
             <mat-menu #menu="matMenu">
-              <button mat-menu-item routerLink="profile">Profile</button>
+              <button mat-menu-item>Profile</button>
               <button mat-menu-item>Change Password</button>
               <button mat-menu-item>Logout</button>
             </mat-menu>
@@ -35,10 +35,12 @@
 
 <mat-drawer-container class="example-container">
   <mat-drawer mode="side" opened class="sidenav">
-    <button mat-button class="matt-button p-0" routerLink="mock" [routerLinkActive]="['active']">
-      <img src="/assets/images/dashboard.png" alt="" />
-      <small>Dashboard</small>
-    </button>
+    <div class="button">
+      <button mat-button class="matt-button p-0" routerLink="mock" [routerLinkActive]="['active']">
+        <img src="/assets/images/dashboard.png" alt="" />
+        <small>Dashboard</small>
+      </button>
+    </div>
   </mat-drawer>
 
   <mat-drawer-content>
