--- a/src/app/employee/dashboard/dashboard.component.html
+++ b/src/app/employee/dashboard/dashboard.component.html
@@ -22,7 +22,7 @@
               <span class="downArrow material-symbols-outlined">keyboard_arrow_down</span>
             </button>
             <mat-menu #menu="matMenu">
-              <button mat-menu-item>Profile</button>
+              <button mat-menu-item routerLink="profile">Profile</button>
               <button mat-menu-item>Change Password</button>
               <button mat-menu-item>Logout</button>
             </mat-menu>
